Switching to pom from gradle